--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             height: 100vh;
             margin: 0;
             font-family: Arial, sans-serif;
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('background.JPG') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
         }
